--- a/ansible/roles/swarm/templates/swarm_client.upstart.j2
+++ b/ansible/roles/swarm/templates/swarm_client.upstart.j2
@@ -5,8 +5,8 @@ start on filesystem
 stop on runlevel [!2345]
 script
 /usr/local/bin/swarm join \
-    --addr {{ docker_addr }}
-    --discovery {{ swarm_discovery_string }}
+    --addr {{ docker_host }}
+    {{ swarm_discovery_string }}
 end script
 
 
