Add new `consul` role because of consul has to run first before swarm-manager.

--- a/ansible/roles/swarm/templates/swarm_manager.upstart.j2
+++ b/ansible/roles/swarm/templates/swarm_manager.upstart.j2
@@ -7,6 +7,6 @@ script
 /usr/local/bin/swarm manage \
     -H tcp://0.0.0.0:{{ swarm_manager_port }} \
     --strategy {{  packing_strategy }} \
-    --discovery {{ swarm_discovery_string }}
+    {{ swarm_discovery_string }}
 end script
 
