--- a/ansible/roles/swarm/templates/swarm_client.upstart.j2
+++ b/ansible/roles/swarm/templates/swarm_client.upstart.j2
@@ -3,6 +3,7 @@ author "anarcher"
 console log
 start on filesystem
 stop on runlevel [!2345]
+respawn
 script
 /usr/local/bin/swarm join \
     --addr {{ docker_host }} \
