--- a/ansible/roles/consul/templates/consul.upstart.j2
+++ b/ansible/roles/consul/templates/consul.upstart.j2
@@ -5,5 +5,5 @@ start on filesystem and started docker
 stop on runlevel[!2345]
 respawn
 script
-    /usr/bin/docker start -a manager
+    /usr/bin/docker start -a consul
 end script
