--- a/ansible/roles/swarm/templates/swarm_manager.upstart.j2
+++ b/ansible/roles/swarm/templates/swarm_manager.upstart.j2
@@ -1,7 +1,7 @@
 description "Docker Swarm Master"
 author "anarcher"
 console log
-start on filesystem
+start on filesystem and started consul
 stop on runlevel [!2345]
 respawn
 script
